--- a/requirements.txt
+++ b/requirements.txt
@@ -159,6 +159,7 @@ pyodbc==4.0.27
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
 pyperclip==1.8.2
+PyQt5-sip==12.9.0
 pyreadline==2.1
 PyRect==0.1.4
 pyrsistent==0.15.4
