--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ certifi==2021.5.30
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.2.5
+django-heroku==0.3.1
 django-toolbelt==0.0.1
 gunicorn==20.1.0
 psycopg2==2.9.1
 pytz==2021.1
 sqlparse==0.4.1
 static3==0.7.0
+whitenoise==5.2.0
 wincertstore==0.2
